--- a/css/style.css
+++ b/css/style.css
@@ -35,45 +35,117 @@ body {
 ol, ul {
 	list-style: none;
 }
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-body {
-	background-color: LightGray;
-}
 /* End of Reset */
 /* Start of Custom Styles */
 .content {
-	box-sizing: border-box;
+	box-sizing: border-box
     padding: 0 15px;
-    border: 1px solid Chocolate;
+    /*border: 1px solid Chocolate;*/
+    width: 970px;
+	margin: 0 auto;
 }
 .top-navigation {
 	background-color: #fff;
 }
 .top-navigation > .content {
-	width: 970px;
 	height: 70px;
-	margin: 0 auto;
 }
 .top-navigation .logo {
-    margin-top: 14px;
+    height: 70px;
 }
-.top-navigation .links li {
+.top-navigation .links {
     float: right;
-    display: inline-block;
     font-size: 16px; 
     color: #838994; 
-    margin: 25px;
+    margin: 16px;
     margin-left: 25px;
+    -webkit-font-smoothing: antialiased;
+}
+.top-navigation .links li {  
+    display: inline-block;
+    margin-left: 25px;
+}
+.top-navigation .links > .active {
+    color: #4c5058;
+    font-weight: 600;
+}
+.top-navigation .links li:hover {
+    transition: color 0.2s ease;
+    cursor: pointer;
+    color: #333333;
+}
+.introduction{
+    box-sizing: border-box;
+    display:block;
+    height: 271px;
+    background: url('../img/first-background.jpg') bottom center no-repeat;
+    background-repeat: no-repeat;
+    background-position: 50% 100%;
+    background-size: cover;
+    height: 45.938rem;
+    overflow: auto;
+    color: #FFFFFF;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    letter-spacing: -1px;
+}
+.intro-content > h1 {
+    font-size: 3.125rem;
+    font-weight: 300;
+    height: 62px;
+    margin-top: 17.5rem;
+    margin-bottom: 18px;
+    margin-left: 0px;
+    margin-right: 0px;
+    line-height: 62.5px;
+}
+.intro-content > h3 {
+    font-size: 1.563rem;
+    font-weight: 300;
+    height: 30px;
+    line-height: 30px;
+    margin-top: 18px;
+    margin-bottom: 18px;
+    margin-left: 0px;
+    margin-right: 0px;
+    letter-spacing: -0.479999989271164px;
+}
+.half {
+    text-shadow: none;
+    border-style: none;
+    border-radius: 4px;
+    padding: 16px 26px;
+    line-height: 1.33;
+    cursor: pointer;
+    display: inline-block;
+}
+button {
+    width: 9.688rem;
+    background-color: #f15a29;
+    border-color: #f15a29;
+    text-shadow: none;
+    border-style: none;
+    border-radius: 4px;
+    padding: 1rem 1.5rem;
+    color: white;
+    font-size: 1.125rem;
+    cursor: pointer;
+}
+.bouncing-arrow {
+    -webkit-animation: bounce 1.2s ease-in-out infinite alternate;
+    animation: bounce 1.2s ease-in-out infinite alternate;
+    -o-animation: bounce 1.2s ease-in-out infinite alternate;
+    height: 5.625rem;
+    bottom: 0;
+    left: 50%;
+    z-index: 1000;
+}
+@keyframes bounce {
+    0%, 100% {margin-top: 0px;}
+    50% {margin-top: 2rem;}
+}
+@-webkit-keyframes bounce {
+    0%, 100% {margin-top: 0px;}
+    50% {margin-top: 2rem;}
 }
