--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,8 @@ ol, ul {
 }
 .top-navigation {
 	background-color: #fff;
+    position: fixed;
+    width: 100%;
 }
 .top-navigation > .content {
 	height: 70px;
@@ -148,4 +150,39 @@ button {
 @-webkit-keyframes bounce {
     0%, 100% {margin-top: 0px;}
     50% {margin-top: 2rem;}
+}
+.cases {
+    background-color: #fff;
+    overflow: hidden;
+    padding-bottom: 10rem;
+    box-sizing: border-box;
+    vertical-align: baseline;
+}
+.cases .content {
+    margin-top: 7.875rem;
+    padding: none;
+    color: #1d1e21;
+    text-align: center
+}
+.cases h2{
+    font-size: 2.75rem;
+    margin: 1.625rem 0 3.125rem;
+    font-weight: 300;
+}
+.cases .devices {
+    display: flex;
+}
+.cases .devices > li{
+    width: 33.3333333%;
+    float: right;
+    display: inline-block;
+}
+.cases .devices h3{
+    font-weight: 400;
+    font-size: 1.563rem;
+    margin: 2.5rem 0px 1.875rem;
+}
+.cases .device p{
+    font-weight: 300;
+    font-size; 1.313rem;
 }
