--- a/css/style.css
+++ b/css/style.css
@@ -226,4 +226,31 @@ button {
     font-size: 0.9rem;
     font-weight: 300;
     color: #838994;
+    text-align: center;
+}
+.buy-now {
+    background: url('../img/buy-now-bg.jpg') bottom center no-repeat;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45.938rem;
+    padding-top: 5.250rem;
+    overflow: auto;
+}
+.buy-now .adjustable {
+    width: 15rem;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.8);
+}
+.buy-now h2 {
+    font-weight: 400;
+    font-size: 1.563rem;
+    color: #f15a29;
+    margin: 2.5rem 0px 1.875rem;
+}
+.buy-now p {
+    font-weight: 300;
+    font-size: 1.15rem;
+    line-height: 1.5;
+    color: #4c5058;
+    margin-bottom: 1.250rem;
 }
